--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	
 <h2>Orono, Maine</h2>
-<img src="Selfie.JPG" style="width:304px;height:228px;">
+<img src="Selfie.jpg" style="width:304px;height:228px;">
 <br>
 <br>
 <br>
