--- a/Resume.html
+++ b/Resume.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Resume</title>
+<body background="aboutmeback.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
