--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	
 <h2>Orono, Maine</h2>
-<img <img style="border:5px double black;" src="Selfie.jpg" style="width:304px;height:228px;">
+<img style="border:5px double black;" src="Selfie.jpg" style="width:304px;height:228px;">
 <br>
 <br>
 <br>
