--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@ listen to anything from Aerosmith to Kodak Black, my favorite album is the Incre
  </p></font></center>
  
  <center><font color="white"><h2>Hockey</h2></font><center>
-<center><img src="hockey.jpg" alt="Hockey" style="width:304px;height:228px;"><center>
+<center><img <img style="border:5px double black;"src="hockey.jpg" alt="Hockey" style="width:304px;height:228px;"><center>
 
 <center><font color="white"><h3>Lacrosse</h3></font><center>
 <center><img src="lacrosse.jpg" alt="Lacrosse" style="width:304px;height:228px;"><center>
